force-app/main/default/objects/Project__c/fields/Blocked__c.field-meta.xml
<CustomField>
    <fullName>Blocked__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>you can&#39;t complete this project, even though you may be able to continue to progress it</inlineHelpText>
    <label>Blocked</label>
    <type>Checkbox</type>
</CustomField>