force-app/main/default/objects/Project__c/fields/Co_Owner_Count__c.field-meta.xml
<CustomField>
    <fullName>Co_Owner_Count__c</fullName>
    <label>Co-Owner Count</label>
    <summaryForeignKey>Co_Owner__c.Project__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>