force-app/main/default/objects/Project__c/fields/Done_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Done_Timestamp__c</fullName>
    <description>set by the system, when this moves to Done</description>
    <inlineHelpText>set by the system, when this moves to Done</inlineHelpText>
    <label>Done Timestamp</label>
    <type>DateTime</type>
</CustomField>