force-app/main/default/objects/Project__c/fields/Full_Description__c.field-meta.xml
<CustomField>
    <fullName>Full_Description__c</fullName>
    <inlineHelpText>type all you want here...it&#39;s only on the detail page</inlineHelpText>
    <label>Full Description</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>