force-app/main/default/objects/Project__c/fields/Move_to_Unowned__c.field-meta.xml
<CustomField>
    <fullName>Move_to_Unowned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Move to Unowned</label>
    <type>Checkbox</type>
</CustomField>