force-app/main/default/objects/Project__c/fields/Preferred_PMM__c.field-meta.xml
<CustomField>
    <fullName>Preferred_PMM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>who do you want to do this project?</description>
    <inlineHelpText>who do you want to do this project? (optional)</inlineHelpText>
    <label>Preferred PMM</label>
    <lookupFilter>
        <active>false</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <errorMessage>The selected user must have the system admin or standard platformer profile</errorMessage>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>Standard Platformer</value>
        </filterItems>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>PreferredPMM</relationshipName>
    <type>Lookup</type>
</CustomField>