force-app/main/default/objects/Project__c/fields/Requestor__c.field-meta.xml
<CustomField>
    <fullName>Requestor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>the person who is making the request.  If you don&#39;t see someone here that should be, please notify an Admin to add the user to the options</description>
    <inlineHelpText>the person who is making the request.  If you don&#39;t see someone here that should be, please notify an Admin to add the user to the options</inlineHelpText>
    <label>Requestor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>