force-app/main/default/objects/Project__c/fields/Self_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Self_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>this project was submitted by the person and assigned to themself</description>
    <inlineHelpText>this project was submitted by the person and assigned to themself</inlineHelpText>
    <label>Self-Submitted</label>
    <type>Checkbox</type>
</CustomField>