force-app/main/default/objects/Project__c/fields/Short_Description__c.field-meta.xml
<CustomField>
    <fullName>Short_Description__c</fullName>
    <inlineHelpText>do this in a few words--it&#39;ll show up on kanban cards.</inlineHelpText>
    <label>Short Description</label>
    <length>1000</length>
    <type>Html</type>
</CustomField>