force-app/main/default/objects/Project__c/fields/Started_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Started_Timestamp__c</fullName>
    <description>first time this project moved to Doing</description>
    <inlineHelpText>first time this project moved to Doing</inlineHelpText>
    <label>Started Timestamp</label>
    <type>DateTime</type>
</CustomField>