force-app/main/default/objects/Project__c/fields/Users__c.field-meta.xml
<CustomField>
    <fullName>Users__c</fullName>
    <description>hidden field for aggregating interested users</description>
    <inlineHelpText>hidden field for aggregating interested users</inlineHelpText>
    <label>Users</label>
    <type>TextArea</type>
</CustomField>