force-app/main/default/objects/Project__c/validationRules/no_priority_less_than_0.validationRule-meta.xml
<ValidationRule>
    <fullName>no_priority_less_than_0</fullName>
    <active>true</active>
    <errorConditionFormula>Priority__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Priority__c</errorDisplayField>
    <errorMessage>priority must be a positive value</errorMessage>
</ValidationRule>