force-app/main/default/objects/Project__c/listViews/Bo.listView-meta.xml
<ListView>
    <fullName>Bo</fullName>
    <booleanFilter>(1 or 4 or 5) and (2 or 3)</booleanFilter>
    <columns>NAME</columns>
    <columns>Short_Description__c</columns>
    <columns>Priority__c</columns>
    <columns>Due_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER.FIRST_NAME</field>
        <operation>equals</operation>
        <value>Bo</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Done,Won&#39;t do</value>
    </filters>
    <filters>
        <field>LAST_UPDATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:10</value>
    </filters>
    <filters>
        <field>Users__c</field>
        <operation>contains</operation>
        <value>Bo Mangels</value>
    </filters>
    <filters>
        <field>Area__c</field>
        <operation>equals</operation>
        <value>IoT</value>
    </filters>
    <label>*IoT/Bo</label>
</ListView>