force-app/main/default/objects/Project__c/listViews/Gabe_2.listView-meta.xml
<ListView>
    <fullName>Gabe_2</fullName>
    <booleanFilter>(1 OR 2) and (3 or 4)</booleanFilter>
    <columns>NAME</columns>
    <columns>Due_Date__c</columns>
    <columns>Priority__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Done,Won&#39;t do</value>
    </filters>
    <filters>
        <field>Last_Status_Change__c</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:10</value>
    </filters>
    <filters>
        <field>OWNER.LAST_NAME</field>
        <operation>equals</operation>
        <value>Sumner</value>
    </filters>
    <filters>
        <field>Users__c</field>
        <operation>contains</operation>
        <value>Gabe Sumner</value>
    </filters>
    <label>Gabe</label>
</ListView>