force-app/main/default/objects/Project__c/listViews/Heroku_Team.listView-meta.xml
<ListView>
    <fullName>Heroku_Team</fullName>
    <booleanFilter>(1 OR (2 AND 3)) AND (4 OR 5 OR 6)</booleanFilter>
    <columns>NAME</columns>
    <columns>Due_Date__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Priority__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Done,Won&#39;t do</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Done,Won&#39;t do</value>
    </filters>
    <filters>
        <field>Last_Status_Change__c</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:10</value>
    </filters>
    <filters>
        <field>Users__c</field>
        <operation>contains</operation>
        <value>Rahul Awasthy,Desmond Wong</value>
    </filters>
    <filters>
        <field>Area__c</field>
        <operation>equals</operation>
        <value>Heroku</value>
    </filters>
    <filters>
        <field>OWNER.LAST_NAME</field>
        <operation>equals</operation>
        <value>Awasthy,Wong</value>
    </filters>
    <label>*Heroku Team</label>
</ListView>