force-app/main/default/objects/Project__c/listViews/Hugh.listView-meta.xml
<ListView>
    <fullName>Hugh</fullName>
    <booleanFilter>(1 OR 2) and (3 or 4)</booleanFilter>
    <columns>NAME</columns>
    <columns>Short_Description__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Priority__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Done,Won&#39;t do</value>
    </filters>
    <filters>
        <field>LAST_UPDATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:10</value>
    </filters>
    <filters>
        <field>OWNER.LAST_NAME</field>
        <operation>equals</operation>
        <value>Minson</value>
    </filters>
    <filters>
        <field>Users__c</field>
        <operation>contains</operation>
        <value>Hugh Minson</value>
    </filters>
    <label>Hugh</label>
</ListView>