force-app/main/default/objects/Project__c/listViews/In_Progress_by_Team.listView-meta.xml
<ListView>
    <fullName>In_Progress_by_Team</fullName>
    <columns>NAME</columns>
    <columns>Due_Date__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>In Progress</value>
    </filters>
    <label>In Progress by Team</label>
</ListView>