force-app/main/default/objects/Project__c/listViews/Lightning_Team.listView-meta.xml
<ListView>
    <fullName>Lightning_Team</fullName>
    <booleanFilter>(1 OR (2 AND 3)) AND (4 OR 5 OR 6)</booleanFilter>
    <columns>NAME</columns>
    <columns>Due_Date__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Priority__c</columns>
    <columns>Area__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Done,Won&#39;t do</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Done,Won&#39;t do</value>
    </filters>
    <filters>
        <field>Last_Status_Change__c</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:7</value>
    </filters>
    <filters>
        <field>Users__c</field>
        <operation>contains</operation>
        <value>Bryan Jennewein,Hugh Minson,Dayna Lord,Wendy Lee</value>
    </filters>
    <filters>
        <field>Area__c</field>
        <operation>equals</operation>
        <value>Lightning</value>
    </filters>
    <filters>
        <field>OWNER.LAST_NAME</field>
        <operation>equals</operation>
        <value>Jennewein,Minson,Lord,Lee</value>
    </filters>
    <label>*Lightning Team</label>
</ListView>